documentation update and spellcheck

--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -1,7 +1,7 @@
 \documentclass[pdftex,12pt,a4paper]{report}
 \usepackage[utf8]{inputenc}
 \usepackage[croatian]{babel}
-
+\usepackage{url}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{pgf}
