--- a/documentation/LaTeX dokumentacija/FMindeks.tex
+++ b/documentation/LaTeX dokumentacija/FMindeks.tex
@@ -4,11 +4,11 @@ FM-indeks je samostojeći indeks koji su 2000. godine u svom radu opisali i obja
 FM-indeks count je implementacija FM-indeksa koja služi za pronalaženje broja pojavljivanja uzorka P u tekstu S. Općenito se FM-indeks temelji na Burrows-Wheeler transformaciji i sufisknom polju, ali kod izvedbe samo prebrojavanja, ne i dohvaćanja svih pojavljivanja (FM-indeks find), struktura sufiksnog polja se može izostaviti.
 FM-indeks count je ustvari samo izvedba algoritma pretraživanja unatrag  (engl. \emph{backward search}) u kojemu se kreće s pretraživanjem od zadnjeg znaka uzorka P te ako uzorak postoji u tekstu, algoritam vraća koliko se puta on u tekstu ponavlja.
 Pronalaženje broja pojavljivanja uzorka u tekstu provodi se tako da se nad zadanim tekstom prvo stvori FM-indeks sa svojim strukturama OCC tablicom i C tablicom te se zatim koristeći stvorene tablice provodi prebrojavanje za zadani uzorak.
-U originalnoj implementaciji FM-indeksa  \cite{fm1}, algoritam pretraživanja unatrag se provodi nad nizom znakova koji je dobiven iz originalnog teksta na koji su primjenjene različite operacije. Nad originalnim tekstom provedene su redom Burrows-Wheeler transformacija, \emph{Move-To-Front} i \emph{Run-length} kodiranje te stvaranje prefiksnog koda promjenjive duljine.  Za provođenje algoritma potrebne su funkcije C(c) i Occ(c,i). C(c) daje broj znakova u (originalnom) tekstu koji su abecedno prije znaka c uključujući i ponavljanje pojedinih znakova. Occ(c,i) daje broj pojavljivanja znaka c u nizu B[1,i], i=1...$|S|$, gdje je S originalni tekst, B niz dobiven transformacijama originalnog teksta, a znak c je bilokoji znak iz abecede originalnog teksta. Pokazano je \cite{fm2} da brzina izvođenja funkcije Occ(c,i) određuje brzinu izvođenja cijelog algoritma pretraživanja unatrag. U originalnoj implementaciji funkcija Occ(c,i) se računa korištenjem transformiranog (sažetog) originalnog teksta te nekoliko dodatnih pomoćnih struktura. 
+U originalnoj implementaciji FM-indeksa, algoritam pretraživanja unatrag se provodi nad nizom znakova koji je dobiven iz originalnog teksta na koji su primijenjene različite operacije \cite{fm1}. Nad originalnim tekstom provedene su redom Burrows-Wheeler transformacija, \emph{Move-To-Front} i \emph{Run-length} kodiranje te stvaranje prefiksnog koda promjenjive duljine.  Za provođenje algoritma potrebne su funkcije C(c) i Occ(c,i). C(c) daje broj znakova u (originalnom) tekstu koji su abecedno prije znaka c uključujući i ponavljanje pojedinih znakova. Occ(c,i) daje broj pojavljivanja znaka c u nizu B[1,i], i=1...$|S|$, gdje je S originalni tekst, B niz dobiven transformacijama originalnog teksta, a znak c je bilo koji znak iz abecede originalnog teksta. Pokazano je da brzina izvođenja funkcije Occ(c,i) određuje brzinu izvođenja cijelog algoritma pretraživanja unatrag \cite{fm2}. U originalnoj implementaciji funkcija Occ(c,i) se računa korištenjem transformiranog (sažetog) originalnog teksta te nekoliko dodatnih pomoćnih struktura. 
 
 
 
-\section{Naša implementacija}
+\section{Implementacija FM-indeksa}
 U ovoj implementaciji FM-indeksa koristi se algoritam pretraživanja unatrag i ranije spomenuta struktura C tablice na isti način kao i u originalnoj implementaciji, ali je funkcija Occ(c,i) izvedena korištenjem wavelet stabla i RRR struktura čiji je princip objašnjen u ranijem poglavlju.
 
 Prvi korak je dodavanje znaka \$ na kraj niza te stvaranje C tablice koja za svaki znak iz abecede ulaznog teksta sadrži informacije koliko je znakova abecedno manjih ispred tog znaka abecede, uključujući i ponavljanje znakova. Pretpostavimo da ulazni niz s nadodanim znakom kraja niza glasi \emph{ACAAGATGCACAATGTCCCA\$}. Stvorena struktura (C tablica) izgledala bi ovako:
@@ -24,7 +24,7 @@ C(c) & 0 & 1 & 9 & 15 & 18 \\ \hline
 \end{table}
 
 \vspace{5 mm}
-Sljedeći korak je provođenje Burrows-Wheeler transformacije nad zadanim tekstom  \linebreak korištenjem \emph{multikey quick} sortiranja čime se iz niza \emph{ACAAGATGCCAATGTCCCA\$} dobiva niz \emph{ACCC\$CAGACAAGCTATTGAA}. Burrows-Wheeler transformacija i \emph{multikey quick} sortiranje detaljno su opisani u prethodnom poglavlju.
+Sljedeći korak je provođenje Burrows-Wheeler transformacije nad zadanim tekstom  \linebreak korištenjem sufiksnog polja, čime se iz niza \emph{ACAAGATGCCAATGTCCCA\$} dobiva niz \emph{ACCC\$CAGACAAGCTATTGAA}. Burrows-Wheeler transformacija i algoritam izgradnje sufiksnog polja detaljno su opisani u prethodnom poglavlju.
 Na temelju dobivenog niza stvara se OCC tablica koja je u ovoj implementaciji predstavljena wavelet stablom. Na temelju izgrađenog stabla prikazanog slikom  \ref{fmWaveletTree}, uz korištenje RRR struktura koje se stvaraju za svaki list stabla (i služe za računanje broja jedinica u dijelu niza pojedinog lista), lako se računaju  vrijednosti Occ(c,i) koje su potrebne za algoritam pretraživanja unatrag. Struktura wavelet stabla i RRR struktura su detaljnije opisane u ranijim potpoglavljima. 
 
 
@@ -94,9 +94,11 @@ PETLJA STOP \newline
 
 
 \subsection{Nedostaci implementacije u programskom jeziku Java}
-Implementacija ovog algoritma napravljena je u programskom jeziku Java.  Iako Java kao programski jezik nudi mnoge pogodnosti, kao jednostavnu sintaksu, dobre popratne biblioteke i automatsko upravljanje memorijom, ipak postoje i određeni nedostatci ovakvog jezika. Možda najveći nedostatak Jave dolazi upravo od jedne predosti samog jezika a to je automatsko upravljanje memorijom. To znaći da se programski jezik sam brine oko oslobađanja i zauzimanja memorije, što može biti problematično prilikom izvođenja aplikacije koje troše puno memorije. U tim slučajevima potrebno je ručno pozvati \textit{garbage collector} kako bi oslobodio zauzetu memoriju, no to nažalost opet ima utjecaj na brzinu izvođenja, posebno ukoliko je takvih poziva više. Osim toga, Java virtualna mašina često zauzme više memorije nego joj je uistinu potrebno, što se jako dobro može vidjeti korištenjem alata za profiliranje. To svakako predstavlja problem ukoliko program prilikom izvođenja zauzima velike količine memorije, jer se one dodatno povečaju zbog tog praznog prostora kojeg zauzem Java virtualna mašina. Iako postoje naredbe kojima se može pokušati regulirati količina memorije koju će virtualna mašina smjeti zauzeti, kao i naredbe kojima bi se trebalo moći natjerati virtualnu mašinu da memoriju koju je zauzela, a ne koristi ju, vrati operacijskom sustavu, uočeno je kako je potrebno dobro podesiti parametre tih naredbi prilikom izvođenja kako bi se dobili što bolji rezultati. Osim toga, Java virtualni stroj sam po sebi zauzima dosta veliku količinu memorije (prilikom testiranja to je otprilike bilo oko 10MB), što svakako predstavlja još jedan nedostatak programskog jeziak Java. Možda se memorija od 10MB ne ćini kako velika količina memorije, posebice uzevši u obzir raspoloživu količinu memorije u današnjim računalima, no svejedno nije to ni zanemariva količina memorije, posebice ako se indeksiraju kraći znakovni nizovi.
+Implementacija ovog algoritma napravljena je u programskom jeziku Java.  Iako Java kao programski jezik nudi mnoge pogodnosti, kao jednostavnu sintaksu, dobre popratne biblioteke i automatsko upravljanje memorijom, ipak postoje i određeni nedostatci ovakvog jezika. Možda najveći nedostatak Java programskog jezika dolazi upravo od jedne predosti samog jezika, a to je automatsko upravljanje memorijom. To znači da se programski jezik sam brine oko oslobađanja i zauzimanja memorije, što može biti problematično prilikom izvođenja aplikacije koje troše puno memorije. U tim slučajevima potrebno je ručno pozvati \textit{garbage collector} kako bi oslobodio zauzetu memoriju, no to nažalost opet ima utjecaj na brzinu izvođenja, posebno ukoliko je takvih poziva više. Osim toga, Java virtualni stroj često zauzme više memorije nego joj je uistinu potrebno, što se jako dobro može vidjeti korištenjem alata za profiliranje. To svakako predstavlja problem ukoliko program prilikom izvođenja zauzima velike količine memorije, jer se one dodatno povećaju zbog tog praznog prostora kojeg zauzme Java virtualni stroj. Iako postoje naredbe kojima se može pokušati regulirati količina memorije koju će virtualna stroj smjeti zauzeti, kao i naredbe kojima bi se trebalo moći natjerati virtualnu stroj da memoriju koju je zauzela, a ne koristi ju, vrati operacijskom sustavu, uočeno je kako je potrebno dobro podesiti parametre tih naredbi prilikom izvođenja kako bi se dobili što bolji rezultati. Osim toga, Java virtualni stroj sam po sebi zauzima dosta veliku količinu memorije (prilikom testiranja to je otprilike bilo oko 10MB), što svakako predstavlja još jedan nedostatak programskog jezika Java. Možda se memorija od 10MB ne čini kako velika količina memorije, posebice uzevši u obzir raspoloživu količinu memorije u današnjim računalima, no svejedno nije to ni zanemariva količina memorije, posebice ako se indeksiraju kraći znakovni nizovi.
 
-Osim toga upitna je i brzina Java programskog jezika naspram jezika C/C++. Ovdje se neće ulaziti u detalje oko tog pitanja, jer različiti izvori nude različita mjerenja performansi. Programi koji su napisani u programskom jeziku Java obično postižu nešto lošije rezultate, no to sve ovisi o tome koliko su efikasno napravljene pojedine implementacije, kao i o problemu koji je rješavan. 
+Još jedan nedostatak Java programskog jezika jest što primitivni tip podatka \textit{char} zauzima dva bajta memorije. To znači da zapravo imamo dvostruko veću memorijsku složenost nego što bi htjeli. Iz tog razloga, implementacija radi koristeći tip podatka \ref{byte} kako bi se uštedjelo na memoriji. Time smo se limitirali na broj različitih znakova koje možemo prikazati, no kako je glavni fokus ipak stavljen na DNA sekvence i nizove proteina, ovo ograničenje ne predstavlja neki veliki problem. Dodatno je postavljeno još jedno ograničenje, a to je da implementacija može raditi nad osnovnim skupom \textit{ASCII} znakova. To je napravljeno iz razloga što Java programski jezik nema \text{unsigned} inačice tipova podataka (opet jedan veliki nedostatak), te ukoliko bi htjeli raditi nad proširenim skupom \ref{ASCII} znakova, morali bi paziti da negativne vrijednosti preslikamo u njihove pozitivne ekvivalente, zadržavajući leksički poredak (prisjetimo se da su znakovi iz proširenog skupa \textit{ASCII} znakova kodirani tako da imaju 1 na prvom mjestu, što se onda interpretira kao negativan broj). Taj postupak bi uveo dodatne operacije koje bi mogle utjecati na performanse izvođenja ovog algoritma, te iz tog razloga to nije napravljeno (iako doduše implementaciju nije teško proširiti tako da radi i s proširenim skupom \textit{ASCII} znakova). 
+
+Konačno, upitna je i brzina Java programskog jezika naspram jezika C/C++. Ovdje se neće ulaziti u detalje oko tog pitanja, jer različiti izvori nude različita mjerenja performansi. Programi koji su napisani u programskom jeziku Java obično postižu nešto lošije rezultate, no to sve ovisi o tome koliko su efikasno napravljene pojedine implementacije, kao i o problemu koji je rješavan. 
 
 
 
