--- a/documentation/LaTeX dokumentacija/literatura.bib
+++ b/documentation/LaTeX dokumentacija/literatura.bib
@@ -96,3 +96,10 @@
 	Journal = {Freie Universitat Berlin - Bioinformatik, Master Thesis},
 	Title = {A Wavelet Tree Based FM-Index for Biological Sequences in SeqAn},
 	Year = {2012}}
+
+@MISC{corpus,
+author = {Paolo Ferragina; Giovanni Manzini},
+month = {December},
+year = {2013},
+url = {http://pizzachili.dcc.uchile.cl/texts.html}
+}
